--- a/app/src/main/res/layout/activity_resumen_reparto.xml
+++ b/app/src/main/res/layout/activity_resumen_reparto.xml
@@ -43,9 +43,7 @@
                     android:textSize="10sp"
                     android:textStyle="bold" />
 
-            </TableRow>
 
-            <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -86,9 +84,7 @@
                     android:layout_marginStart="20dp"
                     android:textSize="10sp"
                     android:textStyle="bold" />
-            </TableRow>
 
-            <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -407,6 +403,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
                         android:layout_marginStart="20dp"
+                        android:textColor="@color/colorBackgroundNoEntregado"
                         android:textSize="15sp"
                         android:textStyle="bold" />
                 </TableRow>
@@ -432,6 +429,7 @@
                         android:layout_marginLeft="20dp"
                         android:layout_marginStart="20dp"
                         android:textSize="15sp"
+                        android:textColor="@color/colorBackgroundNoEntregado"
                         android:textStyle="bold" />
                 </TableRow>
 
