--- a/app/src/main/res/layout/activity_resumen_reparto.xml
+++ b/app/src/main/res/layout/activity_resumen_reparto.xml
@@ -42,8 +42,8 @@
                     android:layout_marginStart="20dp"
                     android:textSize="10sp"
                     android:textStyle="bold" />
-
-
+            </TableRow>
+            <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -84,7 +84,8 @@
                     android:layout_marginStart="20dp"
                     android:textSize="10sp"
                     android:textStyle="bold" />
-
+            </TableRow>
+            <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -123,7 +124,8 @@
                     android:layout_marginStart="20dp"
                     android:textSize="10sp"
                     android:textStyle="bold" />
-
+            </TableRow>
+            <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
