--- a/app/src/main/res/layout/activity_nueva_notificacion.xml
+++ b/app/src/main/res/layout/activity_nueva_notificacion.xml
@@ -107,6 +107,8 @@
                                 android:text="@string/longitud"
                                 android:textStyle="bold" />
 
+
+
                         </TableRow>
 
                         <TableRow>
@@ -122,6 +124,14 @@
                                 android:layout_height="wrap_content" />
 
                         </TableRow>
+
+                        <ToggleButton
+                            android:id="@+id/btnActualizar"
+                            style="?attr/buttonStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textOff="@string/iniciar_actualizaciones"
+                            android:textOn="@string/parar_actualizaciones" />
 
                     </TableLayout>
 
@@ -198,7 +208,6 @@
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
                     android:textSize="20sp" />
-
 
             </LinearLayout>
 
