--- a/app/src/main/res/layout/datos_resultado_con_firma_con_foto.xml
+++ b/app/src/main/res/layout/datos_resultado_con_firma_con_foto.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -99,7 +100,7 @@
                         android:id="@+id/tv_result_entregado_longitud"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/longitud"/>
+                        android:text="@string/longitud" />
 
                 </TableRow>
 
