--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,19 @@
                 android:textSize="18sp" />
 
             <Button
+                android:id="@+id/button_resetear_app"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="70dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="16dp"
+                android:background="@color/colorBackgroundNoEntregado"
+                android:text="@string/resetear_app"
+                android:textAllCaps="false"
+                android:textColor="@color/cardview_dark_background"
+                android:textSize="18sp" />
+
+            <Button
                 android:id="@+id/button_cerrar_sesion"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
@@ -81,6 +94,8 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 tools:text="@string/titulo_logout" />
+
+
 
         </LinearLayout>
     </ScrollView>
