--- a/app/src/main/res/layout/datos_resultado_con_firma_con_foto.xml
+++ b/app/src/main/res/layout/datos_resultado_con_firma_con_foto.xml
@@ -160,6 +160,19 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@string/relacion_destinatario"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"/>
+
+            <TextView
+                android:id="@+id/tv_result_entregado_relacion_destinatario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/relacion_destinatario"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:text="@string/firma_receptor"
                 android:textStyle="bold"
                 android:layout_marginTop="5dp"/>
