--- a/app/src/main/res/layout/datos_resultado_con_firma_sin_foto.xml
+++ b/app/src/main/res/layout/datos_resultado_con_firma_sin_foto.xml
@@ -160,6 +160,20 @@
                 android:text="@string/receptor"/>
 
             <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/relacion_destinatario"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_result_entregado_relacion_destinatario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/relacion_destinatario" />
+
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/firma_receptor"
